src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Account_Email_GLBL__c</fullName>
        <description>Stamps the Account Email as chosen for the selected Requester on the Interaction.</description>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Fax_GLBL__c</fullName>
        <description>Stamps the Account Fax number as chosen for the selected Requester on the Interaction.</description>
        <label>Account Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Phone_GLBL__c</fullName>
        <description>Stamps the Account Phone number as chosen for the selected Requester on the Interaction.</description>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AddressLine1_GLBL__c</fullName>
        <description>Stamps Address Line 2 with the address line 2 of the Requester&apos;s address that was selected during the Person Search.</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2_GLBL__c</fullName>
        <description>Stamps Address Line 2 with the address line 2 of the Requester&apos;s address that was selected during the Person Search.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_GLBL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the Address object.  This allows Person Search to set the Address on the Case for ease of accessing the selected Account&apos;s Address.</description>
        <label>Address</label>
        <referenceTo>Address_GLBL__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anonymise_Record_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record is related to a non-hcp meeting participant and should be anonymised (via workflows)</description>
        <inlineHelpText>Indicates that this record is related to a non-hcp meeting participant and should be anonymised (via workflows)</inlineHelpText>
        <label>Anonymise Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Rsns_MERC__c</fullName>
        <description>Cancellation Reasons
Created by John Adams on 11/18/2013</description>
        <label>Cancellation Reasons</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing/Incorrect Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requestor Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_GLBL__c</fullName>
        <description>Stamps the City as chosen for the selected Requester on the Interaction.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_GLBL__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <description>Either the country of the call center agent or the country from the caller&apos;s address.</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_MERC__c</fullName>
        <description>Language of person reporting the Case. Created 02/07/2014 by KLorenti, Mavens Consulting</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship from Case to Meeting. Created 10/11/2013 by KLorenti</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_GLBL__c</fullName>
        <description>Stamps the Postal Code as chosen for the selected Requester on the Interaction.</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_GLBL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who transferred the case to the new owner. For example, a CMS Cork user assigning a case to another CMS Cork user.</inlineHelpText>
        <label>Referred By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_GLBL__c</fullName>
        <description>Stamps the State as chosen for the selected Requester on the Interaction.</description>
        <inlineHelpText>You may enter any valid US state postal code 2 character abbreviation</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_MERC__c</fullName>
        <description>Case Topics
Created by John Adams on 11/18/2013</description>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>HCP Information Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event/Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transparency Consent Follow Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Case_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Topic_MERC__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Language_MERC__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>CMS Lilly</label>
        <language>en_US</language>
        <queue>CMS_Lilly</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
        <language>en_US</language>
    </listViews>
</CustomObject>